create model product page full completely

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -377,7 +377,10 @@ a {
 .model-list {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 20px;
+
 }
 
 .model-list div img {
