--- a/public/css/main.css
+++ b/public/css/main.css
@@ -30,6 +30,11 @@ a {
     padding: 0 20px;
 }
 
+.client2Form ul li select {
+    color: var(--main-black) !important;
+    opacity: 1 !important;
+}
+
 .btnMain {
     color: rgba(255, 255, 255, 1);
     font-size: 12px;
@@ -509,12 +514,16 @@ a {
     align-items: center;
     justify-content: space-between;
     gap: 30px;
+ 
 }
 
 .lastNews_cards a {
     max-width: 420px;
     width: 100%;
     transition: all 0.5s ease;
+    height: 100%;
+    display: block;
+
 }
 
 .lastNews_cards a:hover {
@@ -529,6 +538,8 @@ a {
     object-fit: cover;
     width: 100%;
     margin-bottom: 23px;
+    height: 100%;
+    max-height: 315px;
 }
 
 .lastNews_cards a p {
@@ -1345,6 +1356,7 @@ a {
     border: none;
     background-color: rgba(232, 232, 232, 0.6);
     margin-top: 14px;
+    font-size: 16px;
 }
 
 .client2Form ul li input::placeholder {
@@ -1394,6 +1406,7 @@ a {
     background-color: rgba(232, 232, 232, 0.6);
     margin-top: 14px;
     margin-bottom: 30px;
+    font-size: 16px;
 }
 
 .client2Form textarea::placeholder {
@@ -1443,6 +1456,7 @@ a {
     text-align: center;
 }
 .showMore {
+    margin-top: 30px;
     color: white;
     border: 1px solid white;
     font-size: 12px;
